#10342 closed bug (fixed)
Fix Coverity bug 992388: Missing break in switch
Reported by: | puckipedia | Owned by: | phoudoin |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta1 |
Component: | Servers/print_server | Version: | R1/Development |
Keywords: | gci2013 coverity | Cc: | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
Attachments (1)
Change History (7)
by , 11 years ago
Attachment: | 992388.patch added |
---|
comment:1 by , 11 years ago
patch: | 0 → 1 |
---|
comment:2 by , 11 years ago
comment:3 by , 11 years ago
Keywords: | coverity added |
---|---|
Milestone: | R1 → R1/alpha5 |
comment:5 by , 10 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
comment:6 by , 10 years ago
Milestone: | R1/alpha5 → R1/beta1 |
---|
Note:
See TracTickets
for help on using tickets.
These type of CIDs are always tricky if the developer intended it to fall through - if the original code was valid, it would be a good idea to add a comment in the code at least to prevent others from assuming it's a bug.