Fix Coverity bug 992388: Missing break in switch

Signed-off-by: Adrien Destugues <pulkomandy@pulkomandy.tk>

Fixes #10342